# midi_ros

./: CMakeLists.txt  README.md  package.xml
msg/: midi.msg
src/: input.cpp
