<?xml version="1.0"?>
<package format="2">
  <name>midi_ros</name>
  <version>0.0.0</version>
  <description>The midi_ros package</description>
  <maintainer email="kostaskonkk@gmail.com">Kostas Konstantinidis</maintainer>
  <license>BSD</license>
  <author email="kostaskonkk@gmail.com">Kostas Konstantinidis</author> 

  <buildtool_depend>ALSA</buildtool_depend>
  <buildtool_depend>THREADS</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
